--- a/assets/css/jTinder.css
+++ b/assets/css/jTinder.css
@@ -5,68 +5,38 @@ html, body {
     position: relative;
 }
 
-body {
+/*body {
     overflow: hidden;
-}
+}*/
 
 /* Wrapper with padding */
 .wrap  {
-    height:500px;
-    padding: 5%;
+    height:auto;
+    padding:0;
 }
 
-#tinderslide {
-    position: relative;
-    background: #fff;
-    width: 95%;
-    height: 100%;
+#tinderslide {position:relative;width:auto;height:auto;}
+#tinderslide ul {margin:0;position:relative;display:block;height:auto;}
+#tinderslide li {display:block;border-radius:0; width:602px;height:510px;overflow: hidden;position: absolute;top:0;z-index:2;left:0;overflow: hidden;text-align:center;padding:32px 20px 20px;display:block;
+font-size:24px;color: #000;border:0;box-shadow:none; background:transparent; box-shadow:none; 
+-webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
+-moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
+-ms-transform: translate3d(0%,0,0) scale3d(1,1,1);
+-o-transform: translate3d(0%,0,0) scale3d(1,1,1);
+transform: translate3d(0%,0,0) scale3d(1,1,1);
+backface-visibility: hidden;
+-webkit-backface-visibility: hidden;
 }
-
-#tinderslide ul {
-    margin: 0;
-    position: relative;
-    display: block;
-    height: 100%;
-}
-
-#tinderslide li {
-    display: block;
-    width: 40%;
-    height: 100%;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    z-index: 2;
-    left: 0;
-    box-shadow: 0 0 20px rgba(0, 0, 0, .2);
-    overflow: hidden;
-    text-align: center;
-    padding: 10px 10px 10px 10px;
-    background: #eee;
-    font-size: 24px;
-    color: #000;
-    border: 1px solid #fff;
-    border: 1px solid #dfdfdf;
-    border: 1px solid rgba(96, 96, 96, 0.2);
-    -webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
-    -moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
-    -ms-transform: translate3d(0%,0,0) scale3d(1,1,1);
-    -o-transform: translate3d(0%,0,0) scale3d(1,1,1);
-    transform: translate3d(0%,0,0) scale3d(1,1,1);
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-}
-
-/* Image text */
+.user-list-pic-bg{border:6px solid rgba(255,255,255,.2);display:block;box-shadow:0 0 26px 0 rgba(0,0,0,.2);background:transparent;width:100%;height:458px;}
 #tinderslide li h2 {
-    color: #fff;
-    font-size: 30px;
-    text-align: center;
-    position: absolute;
-    top: 40%;
-    left: 0;
-    width: 100%;
-    text-shadow: -1px -1px 0 rgba(0, 0, 0, .2);
+color: #fff;
+font-size: 30px;
+text-align: center;
+position: absolute;
+top: 40%;
+left: 0;
+width: 100%;
+text-shadow: -1px -1px 0 rgba(0, 0, 0, .2);
 }
 
 /* Image rotation */
@@ -122,38 +92,20 @@ body {
 }
 
 /* Image container */
-#tinderslide .img{
-    height: 90%;
-    width: 100%;
-    background-size:contain !important;
-    margin-bottom: 5px;
-    position: relative;
-    -webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
-    -moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
-    -ms-transform: translate3d(0%,0,0) scale3d(1,1,1);
-    -o-transform: translate3d(0%,0,0) scale3d(1,1,1);
-    transform: translate3d(0%,0,0) scale3d(1,1,1);
-    overflow: hidden;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    -webkit-transform: translate3d(0,0,0) scale3d(1,1,1);
-    -webkit-transform-style: preserve-3d;
-}
-
+#tinderslide .img{height:100%;width:100%;background-size:100% !important;margin:0;position:relative;
+-webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
+-moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
+-ms-transform: translate3d(0%,0,0) scale3d(1,1,1);
+-o-transform: translate3d(0%,0,0) scale3d(1,1,1);
+transform: translate3d(0%,0,0) scale3d(1,1,1);
+overflow: hidden;
+backface-visibility: hidden;
+-webkit-backface-visibility: hidden;
+-webkit-transform: translate3d(0,0,0) scale3d(1,1,1);
+-webkit-transform-style: preserve-3d;}
 /* Action - buttons */
-.actions {
-    text-align: center;
-    width: 304px;
-    margin: 0 auto;
-    overflow: hidden;
-}
-
-.actions div {
-    position: relative;
-    display: inline-block;
-    margin-right: -4px;
-}
-
+.actions {text-align:center;width:304px;margin:0 auto;overflow:hidden;}
+.actions div {position: relative;display: inline-block;margin-right:-4px;}
 .actions a i {
     display: inline-block;
     width: 40px;
@@ -225,3 +177,4 @@ body {
     margin-top: 30px;
     font-weight: bold;
 }
+.user-list-pic-wrapper{width:498px;position:relative;}
