--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,3 +127,188 @@ body{margin:0;padding:0;font-family:'Roboto';}
 .policy-link{float:right;}
 .policy-link a{font-family:'poppins';font-size:12px;font-weight:500;text-decoration:none;text-transform:uppercase;line-height:20px;color:#797878;margin:0 0 0 20px;line-height:18px;letter-spacing:0.02em;}
 .policy-link a:hover{color:#fff;}
+
+
+/***** inner page css *****/
+.with-login #header:after{content:'';background:url(../images/pattent.png) repeat 0 0;width:100%;height:100%;display:block;position:absolute;top:0;left:0;opacity:.4;z-index:-1;}
+.with-login #header{background:#f26f6f;width:100%;height:auto;margin:0;position:relative;padding:30px 0 10px;border-bottom:6px solid #221e1e;z-index:10;transition:ease-in-out .5s;}
+.with-login #header.bg-02{background:#9570d7;}
+.with-login #header.bg-03{background:#71afd6;}
+
+.with-login .header{margin:0 0 10px;}
+.breadcrumb-div{display:block;text-align:center;}
+.breadcrumb-div ul{list-style:none;margin:0;padding:0;}
+.breadcrumb-div ul li{display:inline-block;vertical-align:middle;width:auto;margin:0;font-family:'Poppins';font-size:12px;font-weight:500;color:#fff;text-decoration:none;padding:0 15px;text-transform:uppercase;position:relative;letter-spacing:0.08em;}
+.breadcrumb-div ul li a{font-family:'Poppins';font-size:12px;font-weight:500;color:#fff;text-decoration:none;text-transform:uppercase;}
+.breadcrumb-div ul li a:after{content:'>';font-family:'Poppins';font-size:12px;color:#fff;position:absolute;top:50%;right:-5px;transform:translateY(-50%);}
+.breadcrumb-div ul li a:hover{color:#221e1e;}
+.user-dropdown{float:right;}
+.user-dropdown > a{position:relative;padding:11px 0 0 72px;min-height:60px;display:block;text-decoration:none !important;margin:8px -2px 0 0;}
+.user-dropdown > a big{font-family:'poppins';font-size:15px;color:#231f20;text-decoration:none;line-height:20px;text-transform:uppercase;letter-spacing:0.04em;font-weight:700;margin:0 0 3px;display:block;}
+.user-dropdown > a small{font-family:'poppins';font-size:12px;color:#666;text-decoration:none;line-height:20px;text-transform:uppercase;letter-spacing:0.04em;display:block;}
+.user-pic{border:2px solid #fff;box-shadow:1px 2px 3px 0 rgba(0,0,0,.2);width:60px;height:60px;display:block;position:absolute;top:0;left:0;border-radius:100px;display:block;}
+.user-pic img{min-width:56px;min-height:56px;max-width:56px;border-radius:100px;}
+.down-caret{position:absolute;bottom:4px;right:0;}
+.down-caret svg{width:12px;}
+.user-dropdown > a:hover big,
+.user-dropdown > a:hover small{color:#f26f6f;}
+.user-dropdown > a:hover svg{fill:#f26f6f;}
+.dropdown-menu{border:0;border-top:4px solid #f26f6f;border-radius:0;padding:0;}
+.dropdown-menu > li > a{padding:6px 20px;}
+.inner-content{padding:0 0 60px;min-height:700px;}
+/***** List page content *****/
+.user-list{padding:90px 0 0;display:block;position:relative;}
+.bg-name{font-family:'Poppins';font-size:280px;font-weight:700;color:rgba(39,35,36,.03);line-height:100%;text-transform:uppercase;position:absolute;top:-32px;right:-31px;z-index:-1;letter-spacing:0.1em;}
+.user-list:after{content:'';clear:both;display:blck;}
+.user-list-l{width:100%;float:left;max-width:582px;position:relative;}
+.user-list-pic:after{content:'';position:absolute;top:70px;left:-119%;height:82px;background:#221e1e;width:125%;z-index:-1;}
+.user-list-pic:before{content:'';position:absolute;top:70px;right:-105px;height:82px;background:#221e1e;width:89px;z-index:-1;}
+.user-list-pic{width:496px;position:relative;}
+.user-list-pic > a{border:6px solid rgba(255,255,255,.6);display:block; box-shadow:0 0 26px 0 rgba(0,0,0,.2);}
+.user-list-pic > a > img{width:100%;}
+.user-list-pic-close{position:absolute;top:-17px;right:-17px;}
+.user-list-pic-close > a{display:block;width:34px;height:34px;background:#fff;border-radius:0;text-align:center;line-height:36px;box-shadow:0 0 14px 0 rgba(0,0,0,.1);padding:11px 0 0 1px;border-radius:100%;}
+.user-list-pic-close > a:hover{background:#f26f6f;}
+.user-list-pic-close > a svg{width:12px;height:12px;fill-opacity:.5;}
+.user-list-pic-close > a:hover svg{fill:#fff;fill-opacity:1;}
+.user-next-prev{position:absolute;bottom:6px;left:6px;width:100%;height:38px;}
+.user-next-prev a{width:50px;height:38px;background:transparent;text-align:center;padding:11px 5px;top:0;position:absolute;display:block;}
+.user-next-prev a:first-child{left:0;}
+.user-next-prev a:last-child{right:12px;}
+.user-next-prev a:hover{background:#f26f6f;}
+.user-next-prev a svg{width:26px;height:16px;}
+.user-next-prev a:hover svg{fill:#fff;}
+.user-likes{position:absolute;top:120px;right:-83px;border-right:1px solid #ececec;border-bottom:1px solid #ececec;}
+.user-likes a{width:82px;height:82px;text-align:center;display:block;padding:25px 10px;line-height:50px;transition:easy-in-out .5s;}
+.user-likes a:first-child{border-bottom:1px solid #ececec;fill:#2fad66;fill:#fc735d;}
+.user-likes a:first-child:hover{background:#fc735d;fill:#fff;transition:easy-in-out .5s;}
+.user-likes a:last-child{fill:#2fad66;}
+.user-likes a:last-child:hover{background:#2fad66;fill:#fff;transition:easy-in-out .5s;}
+.user-likes a svg{width:27px;}
+
+.user-list-r{width:100%;max-width:480px;float:right;padding:86px 0 0;}
+.user-list-r h2{margin:0 0 35px;padding:0;font-size:100%;line-height:100%;display:block;}
+.user-list-r h2 big:after{width:100px;height:4px;background:#f26f6f;position:absolute;top:42%;right:105%;content:'';transform:translateY(-50%);}
+.user-list-r h2 big{font-family:'poppins';font-size:30px;font-weight:700;line-height:100%;text-transform:uppercase;color:#221e1e;letter-spacing:0.08em;line-height:30px;display:block;position:relative;}
+.user-list-r h2 small{font-family:'Roboto';font-size:15px;font-weight:400;line-height:100%;color:#666;letter-spacing:0.06em;line-height:30px;display:block;}
+.user-list-r p{padding:0;margin:0 0 35px;font-family:'Roboto';font-size:15px;font-weight:400;line-height:100%;color:#666;letter-spacing:0.04em;line-height:24px;display:block;}
+.user-info {list-style:none;margin:0 0 30px;padding:0;}
+.user-info li{font-family:'Roboto';font-size:14px;font-weight:700;line-height:100%;color:#666;letter-spacing:0.04em;line-height:30px;display:block;}
+.user-list-r-btn{float:right;width:auto;}
+.user-list-r-btn a{display:inline-block;margin:0 0 0 10px;text-decoration: none !important;vertical-align:middle;}
+.video-option{width:40px;height:40px;padding:9px 0 0 !important;}
+.video-option svg{width:24px;padding:0;}
+.chat-option{}
+.chat-option small{font-family:'poppins';color:#fff;font-size:13px;font-weight:500;line-height:38px;text-transform:uppercase;letter-spacing:0.08em;padding:0 10px;text-decoration:none;}
+.chat-option span{border-right:1px solid #37b07a;text-align:center;padding:10px 10px;display:inline-block;vertical-align:middle;}
+.chat-option span svg{width:20px;fill:#fff;display:block;}
+
+.green-btn{border:1px solid #37b07a;background:#51ca94;border-radius:2px;box-shadow:0 2px 2px 0 rgba(0,0,0,.2);text-decoration:none;}
+.green-btn:hover span{border-right:1px solid #4bbe8b;}
+.green-btn:hover{background:#37b07a;border:1px solid #51ca94;}
+.white-btn{border:1px solid #efefef;box-shadow:1px 2px 1px 0 #dbdbdb;line-height:38px;text-align:center;display:block;padding:5px 1px 0;}
+
+/***** My Account page css *****/
+.account-l{padding:0;}
+.account-l-head:after{content:'';clear:both;display:block;}
+.account-l-head:before{content:'';width:150%;right:0;background:#fafafa;position:absolute;top:0;display:block;height:100%;border-bottom:1px solid #f3f3f3;border-right:1px solid #f3f3f3;z-index:-1;}
+.account-l-head{padding:15px;position:relative;margin:0 0 25px;}
+.account-l-head .user-pic{position:relative;top:0;left:0;float:left;}
+.user-edit{float:right;width:36px;height:36px;padding:0;margin:12px 0 0;}
+.user-edit svg{width:18px;margin:7px 0 0;}
+.left-title{margin:0 0 18px;padding:0;font-size:16px;line-height:100%;}
+.left-title big{font-family:'poppins';font-size:16px;font-weight:500;text-decoration:none;text-transform:uppercase;letter-spacing:0.04em;line-height:22px;margin:0 0 0 10px;display:inline-block;vertical-align:middle;}
+.left-title span{display:inline-block;vertical-align:middle;width:22px;top:1px;position:relative;}
+.left-title span svg{fill:#f26f6f;width:100%;}
+.account-l-link ul{margin:0;padding:0;list-style:none;border-top:1px solid #f3f3f3;}
+.account-l-link ul li{display:block;}
+.account-l-link ul li a{font-family:'Poppins';font-size:13px;color:#666;text-decoration:none;padding:12px 10px 12px 30px;line-height:20px;border-bottom:1px solid #f3f3f3;display:block;letter-spacing:0.04em;position:relative;}
+.account-l-link ul li a:after{content:'\e900';font-family:'icomoon';position:absolute;top:50%;left:10px;transform:translateY(-50%);}
+.account-l-link ul li.active a,
+.account-l-link ul li a:hover{background:#f3f3f3;color:#f26f6f;}
+.account-l-link ul li.active a:after
+.account-l-link ul li a::hover:after{color:#f26f6f;}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {display:none;}
+
+.switch .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.switch .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.switch .slider.round {
+    border-radius: 34px;
+}
+
+.switch .slider.round:before {
+    border-radius: 50%;
+}
+#loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background:#e9e9e9;
+    opacity:1;
+    z-index:999999;
+    transition: top .8s cubic-bezier(.7,0,.3,1);
+    -moz-transition: top .8s cubic-bezier(.7,0,.3,1);
+    -webkit-transition: top .8s cubic-bezier(.7,0,.3,1);
+    -o-transition: top .8s cubic-bezier(.7,0,.3,1);
+}
+.loader-container {
+    position: absolute;
+    width: 200px;
+    margin-left: -100px;
+    left: 45%;
+    top: 50%;
+    display: inline-block;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
