--- a/assets/css/jTinder.css
+++ b/assets/css/jTinder.css
@@ -17,8 +17,8 @@ html, body {
 
 #tinderslide {position:relative;width:auto;height:auto;}
 #tinderslide ul {margin:0;position:relative;display:block;height:auto;}
-#tinderslide li {display:block;border-radius:0; width:602px;height:510px;overflow: hidden;position: absolute;top:0;z-index:2;left:0;overflow: hidden;text-align:center;padding:32px 20px 20px;display:block;
-font-size:24px;color: #000;border:0;box-shadow:none; background:transparent; box-shadow:none; 
+#tinderslide li {display:block;border-radius:0;margin:0; position: absolute;top:0;z-index:2;left:0;overflow:visible;text-align:center;padding:0;
+display:block;font-size:24px;color: #000;border:0;box-shadow:none; background:transparent; box-shadow:none; background-color:transparent;
 -webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
 -moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
 -ms-transform: translate3d(0%,0,0) scale3d(1,1,1);
@@ -27,19 +27,10 @@ transform: translate3d(0%,0,0) scale3d(1,1,1);
 backface-visibility: hidden;
 -webkit-backface-visibility: hidden;
 }
-.user-list-pic-bg{border:6px solid rgba(255,255,255,.2);display:block;box-shadow:0 0 26px 0 rgba(0,0,0,.2);background:transparent;width:100%;height:458px;}
-#tinderslide li h2 {
-color: #fff;
-font-size: 30px;
-text-align: center;
-position: absolute;
-top: 40%;
-left: 0;
-width: 100%;
-text-shadow: -1px -1px 0 rgba(0, 0, 0, .2);
-}
+.user-list-pic-bg{display:block;background:transparent;width:100%;height:458px;background-color:transparent;
+position:relative;box-shadow:0 0 26px 0 rgba(0,0,0,.06);border:6px solid rgba(255,255,255,.2);}
+#tinderslide li h2 {color: #fff;font-size: 30px;text-align: center;position: absolute;top: 40%;left: 0;width: 100%;}
 
-/* Image rotation */
 #tinderslide li.panel {
     /*-webkit-transform: rotate(-1deg);
     -moz-transform: rotate(-1deg);
@@ -177,4 +168,4 @@ backface-visibility: hidden;
     margin-top: 30px;
     font-weight: bold;
 }
-.user-list-pic-wrapper{width:498px;position:relative;}
+.user-list-pic-wrapper{width:498px;position:relative;background:transparent;background-color:transparent;}
