--- a/assets/css/icomoon.css
+++ b/assets/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?ysd01u');
-  src:  url('../fonts/icomoon.eot?ysd01u#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?ysd01u') format('truetype'),
-    url('../fonts/icomoon.woff?ysd01u') format('woff'),
-    url('../fonts/icomoon.svg?ysd01u#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?fyfppt');
+  src:  url('../fonts/icomoon.eot?fyfppt#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?fyfppt') format('truetype'),
+    url('../fonts/icomoon.woff?fyfppt') format('woff'),
+    url('../fonts/icomoon.svg?fyfppt#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,70 +24,106 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-down-arrow-(1):before {
+.icon-arrow-left:before {
   content: "\e900";
 }
-.icon-edit:before {
+.icon-camera:before {
   content: "\e901";
 }
-.icon-facebook-letter-logo:before {
+.icon-cancel:before {
   content: "\e902";
 }
-.icon-gift:before {
+.icon-chat:before {
   content: "\e903";
 }
-.icon-google-plus:before {
+.icon-close:before {
   content: "\e904";
 }
-.icon-instagram .path1:before {
+.icon-down-arrow:before {
   content: "\e905";
+}
+.icon-edit:before {
+  content: "\e906";
+}
+.icon-facebook-letter-logo:before {
+  content: "\e907";
+}
+.icon-full-screen:before {
+  content: "\e908";
+}
+.icon-gift:before {
+  content: "\e909";
+}
+.icon-google-plus:before {
+  content: "\e90a";
+}
+.icon-heart:before {
+  content: "\e90b";
+}
+.icon-instagram .path1:before {
+  content: "\e90c";
   color: rgb(179, 64, 74);
 }
 .icon-instagram .path2:before {
-  content: "\e906";
+  content: "\e90d";
   margin-left: -1em;
   color: rgb(179, 64, 74);
 }
 .icon-instagram .path3:before {
-  content: "\e907";
+  content: "\e90e";
   margin-left: -1em;
   color: rgb(244, 178, 176);
 }
 .icon-instagram .path4:before {
-  content: "\e908";
+  content: "\e90f";
   margin-left: -1em;
   color: rgb(179, 64, 74);
 }
 .icon-instagram .path5:before {
-  content: "\e909";
+  content: "\e910";
   margin-left: -1em;
   color: rgb(179, 64, 74);
 }
-.icon-linkedin-logo:before {
-  content: "\e90a";
-}
-.icon-manager:before {
-  content: "\e90b";
-}
-.icon-next-page:before {
-  content: "\e90c";
-}
-.icon-photo-camera:before {
-  content: "\e90d";
-}
-.icon-play-button:before {
-  content: "\e90e";
-}
-.icon-twitter:before {
-  content: "\e90f";
-}
-.icon-unlink:before {
-  content: "\e910";
-}
-.icon-video-camera:before {
+.icon-instagram-logo:before {
   content: "\e911";
 }
-.icon-youtube:before {
+.icon-linkedin-logo:before {
   content: "\e912";
+}
+.icon-next-arrow:before {
+  content: "\e913";
+}
+.icon-next-page:before {
+  content: "\e914";
+}
+.icon-photo-camera:before {
+  content: "\e915";
+}
+.icon-picture:before {
+  content: "\e916";
+}
+.icon-play-button:before {
+  content: "\e917";
+}
+.icon-prev-arrow:before {
+  content: "\e918";
+}
+.icon-star:before {
+  content: "\e919";
+}
+.icon-tick-inside-circle:before {
+  content: "\e91a";
+}
+.icon-twitter:before {
+  content: "\e91b";
+}
+.icon-unlink:before {
+  content: "\e91c";
+}
+.icon-video-camera:before {
+  content: "\e91d";
+}
+.icon-youtube:before {
+  content: "\e91e";
 }
 
