--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,87 +1,117 @@
-@media(min-width:1025px){
+/*@media(min-width:1025px){
 .ftr-contact a{pointer-events:none;}
-}
+}*/
 
 @media(max-width:1499px){
-.bx-wrapper img {max-width:100%;min-width:1199px;}
-.hero-caption h2 {margin:0 0 10px;padding:0;font-size:34px;letter-spacing:0.03em;line-height:44px;}
-.hero-caption p{margin:0 0 25px;}
-.hero-caption a {widtH:140px;padding:10px;}
-.header {margin: 30px 0 0;}
-.hero-section {margin:-110px 0 0;}
+    .bx-wrapper img {max-width:100%;min-width:1199px;}
+    .hero-caption h2 {margin:0 0 10px;padding:0;font-size:34px;letter-spacing:0.03em;line-height:44px;}
+    .hero-caption p{margin:0 0 25px;}
+    .hero-caption a {widtH:140px;padding:10px;}
+    .header {margin: 30px 0 0;}
+    .hero-section {margin:-110px 0 0;}
 
 }
 @media (min-width:1200px) and (max-width:1279px){
-.benefits-content p br{display:none;}
+    .benefits-content p br{display:none;}
 }
 
 @media(max-width:1199px){
-.home-welcome p br,
-.benefits-content p br{display:none;}
-.home-welcome{padding:50px 0;}
+    .home-welcome p br,
+    .benefits-content p br{display:none;}
+    .home-welcome{padding:50px 0;}
 
 }
 
 @media(min-width:1025px) and (max-width:1199px){
-.footer-column:nth-child(1){width:21%;}
-.footer-column:nth-child(2){width:24%;}
-.footer-column:nth-child(3){width:34%;}
-.footer-column:nth-child(4){width:21%;}
-.package-table table th h3 {padding:21px 6px;}
-.package-table table thead th{letter-spacing:0;}
-.hero-caption {max-width:970px;}
+    .footer-column:nth-child(1){width:21%;}
+    .footer-column:nth-child(2){width:24%;}
+    .footer-column:nth-child(3){width:34%;}
+    .footer-column:nth-child(4){width:21%;}
+    .package-table table th h3 {padding:21px 6px;}
+    .package-table table thead th{letter-spacing:0;}
+    .hero-caption {max-width:970px;}
 }
 
 @media(max-width:1024px){
-.footer-column:nth-child(1){width:18%;}
-.footer-column:nth-child(2){width:25%;}
-.footer-column:nth-child(3){width:35%;}
-.footer-column:nth-child(4){width:22%;}
+    .footer-column:nth-child(1){width:18%;}
+    .footer-column:nth-child(2){width:25%;}
+    .footer-column:nth-child(3){width:35%;}
+    .footer-column:nth-child(4){width:22%;}
 
 }
 @media(min-width:992px) and (max-width:1024px){
-.hero-caption {max-width:970px;}
-.package-table table th:nth-child(1),
-.package-table table td:nth-child(1) {width:40%;}
-.package-table table th:nth-child(3),
-.package-table table td:nth-child(3) {width:40%;}
-.package-table table th h2 {padding:22px 110px 0 0;}
+    .hero-caption {max-width:970px;}
+    .package-table table th:nth-child(1),
+    .package-table table td:nth-child(1) {width:40%;}
+    .package-table table th:nth-child(3),
+    .package-table table td:nth-child(3) {width:40%;}
+    .package-table table th h2 {padding:22px 110px 0 0;}
 
 }
 
 @media(min-width:768px) and (max-width:991px){
-.hero-caption {max-width:738px;}
-.benefits-content h2 span{display:block;}
-.package-table table th:nth-child(1),
-.package-table table td:nth-child(1) {width:40%;}
-.package-table table th:nth-child(3),
-.package-table table td:nth-child(3) {width:40%;}
-.package-table table th h2 {padding:22px 110px 0 0;}
-.package-table table th h3 big{font-size:30px;}
-.package-table table th h4{font-size:15px;}
-.package-table table th h3 small{font-size:11px;}
-.package-table table th h3 {padding:20px 7px;}
-.package-table table th:nth-child(2) h3 {padding:26px 10px;}
-.package-table table th h2 {padding: 22px 20px 0 0;}
-.package-table table th svg{display:none;}
-.home-package {padding:50px 0;}
-.ftr-newsletter form {max-width:200px;}
-.follow-luvr > a {margin:0 6px;}
-.footer-column h3 {margin:0 0 20px;font-size:14px;}
-.follow-luvr > a svg{width:20px;}
-.footer-ul li a{font-size:13px;}
-.footer-column {min-height: 160px;padding:20px 0 15px;}
-.footer-top {padding:30px 0;}
-.benefits-content p{font-size:13px;line-height:18px;}
-.benefits-content {padding:25px 10p;}
-.benefits-content h2{line-height:20px;}
-.home-welcome p {font-size:14px;line-height:22px;}
-.home-welcome h2 {margin: 0 0 30px;}
-.home-welcome {padding:40px 0;}
+    .hero-caption {max-width:738px;}
+    .benefits-content h2 span{display:block;}
+    .package-table table th:nth-child(1),
+    .package-table table td:nth-child(1) {width:40%;}
+    .package-table table th:nth-child(3),
+    .package-table table td:nth-child(3) {width:40%;}
+    .package-table table th h2 {padding:22px 110px 0 0;}
+    .package-table table th h3 big{font-size:30px;}
+    .package-table table th h4{font-size:15px;}
+    .package-table table th h3 small{font-size:11px;}
+    .package-table table th h3 {padding:20px 7px;}
+    .package-table table th:nth-child(2) h3 {padding:26px 10px;}
+    .package-table table th h2 {padding: 22px 20px 0 0;}
+    .package-table table th svg{display:none;}
+    .home-package {padding:50px 0;}
+    .ftr-newsletter form {max-width:200px;}
+    .follow-luvr > a {margin:0 6px;}
+    .footer-column h3 {margin:0 0 20px;font-size:14px;}
+    .follow-luvr > a svg{width:20px;}
+    .footer-ul li a{font-size:13px;}
+    .footer-column {min-height: 160px;padding:20px 0 15px;}
+    .footer-top {padding:30px 0;}
+    .benefits-content p{font-size:13px;line-height:18px;}
+    .benefits-content {padding:25px 10p;}
+    .benefits-content h2{line-height:20px;}
+    .home-welcome p {font-size:14px;line-height:22px;}
+    .home-welcome h2 {margin: 0 0 30px;}
+    .home-welcome {padding:40px 0;}
 
 }
 
 @media(max-width:767px){
-.luvr-benefits-ul li {width:100%;float:none;}
+    .luvr-benefits-ul li {width:100%;float:none;}
 
+}
+
+/*19-04-2017*/
+.benefits-content {
+    min-height: 200px;
+}
+@media(max-width:1560px){
+    .benefits-content {
+        min-height: 240px;
+    }
+}
+@media(max-width:1550px){
+    .benefits-content {
+        min-height: 260px;
+    }
+}
+@media(max-width:1050px){
+    .benefits-content {
+        min-height: 280px;
+    }
+}
+@media(max-width:990px){
+    .benefits-content {
+        min-height: 270px;
+    }
+}
+@media(max-width:767px){
+    .benefits-content {
+        min-height: auto;
+    }
 }
