--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,8 +95,9 @@ a:hover, a:focus{outline:none;outline:0;outline-offset:0;}
 .package-table table tbody tr:nth-child(2n+1) td:nth-child(2n+2){background:#ebebeb}
 .package-table table tbody tr:nth-child(2n+2) td:nth-child(2n+1){background:#f6f6f6}
 .package-table table tbody tr:nth-child(2n+2) td:nth-child(2n+2){background:#ffffff}
-.package-buy a{background:#51ca94;border:1px solid #37b07a;box-shadow:1px 1px 0 0  rgba(0,0,0,.2);color:#fff;padding:9px 20px;line-height:20px;text-transform:uppercase;font-family:'Poppins';text-decoration:none;font-size:16px;font-weight:400;border:1px solid #37b07a;border-radius:2px;letter-spacing:0.04em;display:block;max-width:150px;width:100%;margin:4px auto;}
-.package-buy a:hover{background:#f26f6f;border:1px solid #e87070;}
+.package-buy a,.package-buy button{background:#51ca94;border:1px solid #37b07a;box-shadow:1px 1px 0 0  rgba(0,0,0,.2);color:#fff;padding:9px 20px;line-height:15px;text-transform:uppercase;font-family:'Poppins';text-decoration:none;font-size:14px;font-weight:400;border:1px solid #37b07a;border-radius:2px;letter-spacing:0.04em;display:block;max-width:150px;width:100%;margin:4px auto;}
+.package-buy a:hover,.package-buy button:hover{background:#f26f6f;border:1px solid #e87070;}
+.package-buy form{display:inline-block;}
 
 /***** Footer csss *****/
 .footer-top{background:#231f20;border-top:5px solid #f26f6f;padding:50px 0;}
@@ -192,7 +193,7 @@ a:hover, a:focus{outline:none;outline:0;outline-offset:0;}
 
 .user-list-r{width:100%;max-width:480px;float:right;padding:86px 0 0;}
 .user-list-r h2{margin:0 0 35px;padding:0;font-size:100%;line-height:100%;display:block;}
-.user-list-r h2 big:after{width:100px;height:4px;background:#f26f6f;position:absolute;top:42%;right:105%;content:'';transform:translateY(-50%);}
+/*.user-list-r h2 big:after{width:100px;height:4px;background:#f26f6f;position:absolute;top:42%;right:105%;content:'';transform:translateY(-50%);}*/
 .user-list-r h2 big{font-family:'poppins';font-size:30px;font-weight:700;line-height:100%;text-transform:uppercase;color:#221e1e;letter-spacing:0.08em;line-height:30px;display:block;position:relative;}
 .user-list-r h2 small{font-family:'Roboto';font-size:15px;font-weight:400;line-height:100%;color:#666;letter-spacing:0.06em;line-height:30px;display:block;}
 .user-list-r p{padding:0;margin:0 0 35px;font-family:'Roboto';font-size:15px;font-weight:400;line-height:100%;color:#666;letter-spacing:0.04em;line-height:24px;display:block;}
