--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,3 +332,43 @@ input:checked + .slider:before { -webkit-transform: translateX(56px); -ms-transf
 .level2 .my-picture-box > a:first-child{overflow:hidden;height:250px;width:250px;}
 .level2 .my-picture-box img{position: absolute;left:-99999px;top:-99999px;right:-99999px;bottom:-99999px;margin:auto;}
 .my-profile .bootstrap-select{width:100% !important;}
+
+/*****   21-april-2017  *****/
+.edit-profile-pic  .modal-content{border-radius:0;}
+.modal.fade.edit-profile-pic  .modal-dialog{border-radius:0;max-width:340px;width:100%;}
+.edit-profile-pic .change-pic:after{content:'';background:#f0efef;width:100%;height:118px;position:absolute;top:0;left:0;z-index:-1;}
+.edit-profile-pic .change-pic{position:relative;z-index:10;padding:40px 0;}
+.edit-profile-pic .change-pic span{border:2px solid #fff;width:160px;height:160px;box-shadow:0 0 18px 0 rgba(0,0,0,.2);border-radius:100%;display:block;overflow:hidden;margin:0 auto 30px;}
+.edit-profile-pic .change-pic span img{min-height:170px;min-height:170px;max-width:100%;dispaly:block;}
+.edit-profile-pic .change-pic button{border:2px solid #37b07a;background:#51ca94;padding:10px;display:block;width:164px;height:42px;line-height:20px;color:#fff;font-weight:14px; font-weight:500;text-decoration:none;text-transform:uppercase;margin:0 auto;border-radius:2px; }
+.edit-profile-pic .change-pic button:hover{background:#fff;color:#51ca94;}
+.edit-profile-pic  button.close{position:absolute;top:10px;right:10px;z-index:100;opacity:1;}
+.edit-profile-pic  button.close span{font-size:16px;}
+.mytooltip{z-index:100;text-align:center;display:inline-block;padding-left: 10px;padding-right:10px;max-width:140px;min-width:140px;}
+
+.header-r{float:right;padding:22px 0;}
+.header-r a{text-decoration:none;color:#231f20;font-size:13px;line-height:normal;text-transform:uppercase;display:inline-block;vertical-align:top;margin:0 0 0 10px;}
+.header-r a svg{width:32px;height:32px;display:inline-block;vertical-align:middle;margin:0 7px 0 0;}
+.header-r a span{display:inline-block;vertical-align:middle;}
+.header-r a:hover{color:#b3404a}
+.header-r a.login-facebook{color:#2d527c;}
+.header-r a.login-instagram{color:#b3404a;}
+.header-r a:hover{opacity:.3;}
+
+.message-css{background:#fff; position:fixed;top:50px;right:50px;z-index:100;box-shadow: 0 0 30px 0 rgba(0,0,0,.4);}
+.message-css h3{margin:0;padding:0 0 3px;font-size:22px;text-decoration:none;line-height:100%;text-transform:uppercase;display:block;
+letter-spacing:0.05em;font-family:'Poppins';font-weight:300;}
+.message-css p{margin:0;padding:0;font-size:14px;color:#666;text-transform:uppercase;line-height:22px;white-space:nowrap;font-family:'Roboto';letter-spacing:0.08em;}
+.message-l{float:left;width:64px;height:74px;float:left;text-align:center;padding:24px 0;}
+.message-l svg{width:26px;height:26px;fill:#fff;}
+.message-r{float:right;padding:14px 16px 10px;}
+
+.success-message{border:2px solid #72c342;}
+.success-message .message-l{background:#72c342;}
+.success-message h3{color:#72c342;}
+
+.cancel-message{border:2px solid #d44c5a;}
+.cancel-message .message-l{background:#d44c5a;}
+.cancel-message h3{color:#d44c5a;}
+.cancel-message .message-l {padding:24px 0 0;}
+.cancel-message .message-l svg{width:28px;height:28px;}
